Plugin directory theme: fix vertical scrollbar in Edge; make bottom border of highlighted thumbnail visible.
See #2274


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@4454 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/plugin/sections/screenshots/style.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/plugin/sections/screenshots/style.scss
@@ -18,10 +18,6 @@
 		max-height: 600px;
 	}
 
-	.image-gallery-thumbnails-container {
-		max-height: 100px;
-	}
-
 	.image-gallery-thumbnail {
 		vertical-align: top;
 
@@ -31,6 +27,6 @@
 	}
 
 	.image-gallery-thumbnails {
-		overflow-x: hidden;
+		overflow: hidden;
 	}
 }
